--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -51,15 +51,16 @@
   border-radius: 15px
   display: flex
   align-items: center
-  border: 3px solid #fff
+  border: 3px solid #acacb0
+  color: #acacb0
   &__input
-    background: inherit
+    background: transparent
     border: none
     outline: none
     width: 100%
-    color: #ffffff
+    color: #acacb0
     &::placeholder
-      color: #fff
+      color: #acacb0
       text-transform: uppercase
       font-weight: 400
 .actionsGroup
