--- a/src/index.sass
+++ b/src/index.sass
@@ -1,6 +1,8 @@
 @import './sass/vars'
 @import './sass/header'
 @import './sass/home'
+html
+  overflow: hidden
 body
   padding: 0
   margin: 0
@@ -12,6 +14,13 @@ body
   height: 100vh
   background: url('assets/images/main_bg.jpg') center no-repeat
   background-size: 100% auto
+  &:before
+    content: ''
+    position: absolute
+    display: flex
+    height: 100%
+    width: 100%
+    background: radial-gradient(circle, transparent, rgba(0, 0, 0, .6))
 .socialsBlock
   position: absolute
   top: 50%
